--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,7 @@
 body {
   min-height: 100vh;
-  padding: 0 16px;
+  margin: 0 0;
+  overflow-x: hidden;
   font-family:
     Poppins;
   text-rendering: optimizeLegibility;
