style: fix style in safari

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,7 +3,8 @@ body {
   margin: 0 0;
   overflow-x: hidden;
   font-family:
-    Poppins;
+    'Poppins',
+    sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
