--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600;700;800&display=swap');
 body {
   min-height: 100vh;
   margin: 0 0;
